# eve

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  cross-platform-plan.md  fix_plan1.md  flowbar.html  index.html  optimization_plan.md  package-lock.json  package.json  parity_plan.md  plan.md  scratchpad.html  vite.config.ts
.github/workflows/: build-installers.yml  ci.yml  release.yml  verify-bundle.yml
packaging/: AppxManifest.xml.template  README.md  local-sign-install.ps1  store-listing.md
scripts/: build-msix.mjs  build.mjs  bump-version.mjs  release.mjs  tauri.mjs
src/: AGENTS.md  Hub.tsx  flow-bar.tsx  main.tsx  scratchpad.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: parakeet_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  audio.rs  command_mode.rs  commands.rs  config.rs  events.rs  file_transcribe.rs  hooks.rs  hotkey.rs  injection.rs  lib.rs  llm.rs  main.rs  models.rs  parakeet.rs  pipeline.rs  polish.rs  secrets.rs  sound.rs  state.rs  text_processing.rs  timing.rs  transcription.rs  tray.rs  window_mgmt.rs
src-tauri/src/context/: active_window.rs  mod.rs
src-tauri/src/db/: dictionary.rs  flow_styles.rs  mod.rs  queries.rs  scratchpad.rs  snippets.rs  transforms.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_dictionary.sql  003_snippets.sql  004_flow_styles.sql  005_transforms.sql  006_scratchpad.sql  007_file_source.sql
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: context.rs  keys.rs  mod.rs  wayland.rs  x11.rs
src-tauri/src/platform/macos/: context.rs  focus.rs  input.rs  keys.rs  mod.rs  permissions.rs
src/components/: FileQueue.tsx  ShortcutCapture.tsx
src/components/onboarding/: Onboarding.tsx
src/lib/: api.ts  edition.ts  options.ts  platform.ts  theme.ts
src/pages/: DictionaryPage.tsx  HistoryPage.tsx  InsightsPage.tsx  LocalModelsPage.tsx  SnippetsPage.tsx  StylesPage.tsx  TransformsPage.tsx
src/styles/: globals.css
