[package]
name = "eve"
version = "0.1.0"
description = "Eve — system-wide AI voice dictation"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the binary on Windows.
name = "eve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# On-device transcription/polish. OFF by default so `cargo check`/`cargo build`
# work without a native toolchain (the local backends then report "not built in"
# and the app falls back to Groq). Enable for real on-device inference with
# `cargo build --features local-models` / `tauri build -- --features local-models`
# — this requires CMake + a C/C++ compiler (LLVM/clang or MSVC) to build
# whisper.cpp / llama.cpp, and noticeably increases build time and binary size.
default = []
local-models = ["dep:whisper-rs", "dep:llama-cpp-2"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture (WASAPI on Windows) + WAV encoding
cpal = "0.15"
hound = "3"

# Text injection
enigo = "0.3"

# Groq HTTP API (multipart upload + JSON) + streaming model downloads.
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }

# Local-model download manager: streamed download + checksum verification.
sha2 = "0.10"
futures-util = "0.3"

# On-device inference (behind the `local-models` feature — see [features]).
# These compile whisper.cpp / llama.cpp via CMake + a C/C++ toolchain.
whisper-rs = { version = "0.14", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }

# Secure API-key storage in the OS credential store (Windows Credential Manager).
# For macOS/Linux later, add the matching backend feature under a target table.
keyring = { version = "3", features = ["windows-native"] }

# History persistence (Phase 3). `bundled` compiles SQLite (FTS5 enabled) so
# there's no system dependency. `chrono` for timestamps + daily-stats date keys.
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }

# Misc
anyhow = "1"
parking_lot = "0.12"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
