[package]
name = "eve"
version = "0.1.0"
description = "Eve — system-wide AI voice dictation"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the binary on Windows.
name = "eve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# On-device inference. OFF by default so `cargo check`/`cargo build` work without
# a native toolchain (the local backends then report "not built in" and the app
# falls back to Groq). Enabling these requires CMake + a C/C++ compiler
# (LLVM/clang or MSVC) to build whisper.cpp / llama.cpp, and noticeably increases
# build time and binary size.
#
# IMPORTANT: `local-whisper` and `local-llm` are MUTUALLY EXCLUSIVE in a single
# binary. whisper.cpp and llama.cpp each statically vendor their own copy of
# `ggml`, so linking both produces hundreds of duplicate `ggml_*` symbols
# (LNK2005 → LNK1169) and the link fails. Pick one per build.
default = []
# On-device speech-to-text (whisper.cpp). Links cleanly on its own.
local-whisper = ["dep:whisper-rs"]
# On-device polish (llama.cpp). Build separately from `local-whisper`.
local-llm = ["dep:llama-cpp-2", "dep:encoding_rs"]
# Back-compat alias: the historical `local-models` flag now means local STT only
# (whisper) — the combination that links cleanly and gives offline transcription
# with no API key. Build with `--features local-llm` (in its own build) for
# on-device polish instead.
local-models = ["local-whisper"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
# Phase 11: self-update against a GitHub Releases feed + launch-at-startup.
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture (WASAPI on Windows) + WAV encoding
cpal = "0.15"
hound = "3"

# Text injection
enigo = "0.3"

# Groq HTTP API (multipart upload + JSON) + streaming model downloads.
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }

# Local-model download manager: streamed download + checksum verification.
sha2 = "0.10"
futures-util = "0.3"

# On-device inference (behind the `local-whisper` / `local-llm` features — see
# [features]). These compile whisper.cpp / llama.cpp via CMake + a C/C++ toolchain.
whisper-rs = { version = "0.16", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
# Decoder for llama.cpp `token_to_piece` (must match llama-cpp-2's encoding_rs).
encoding_rs = { version = "0.8", optional = true }

# Secure API-key storage in the OS credential store (Windows Credential Manager).
# For macOS/Linux later, add the matching backend feature under a target table.
keyring = { version = "3", features = ["windows-native"] }

# History persistence (Phase 3). `bundled` compiles SQLite (FTS5 enabled) so
# there's no system dependency. `chrono` for timestamps + daily-stats date keys.
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }

# Misc
anyhow = "1"
parking_lot = "0.12"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
