[package]
name = "eve"
version = "0.1.0"
description = "Eve — system-wide AI voice dictation"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the binary on Windows.
name = "eve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# On-device inference. OFF by default so `cargo check`/`cargo build` work without
# a native toolchain (the local backends then report "not built in" and the app
# falls back to Groq). Enabling these requires CMake + a C/C++ compiler
# (LLVM/clang or MSVC) to build whisper.cpp / llama.cpp, and noticeably increases
# build time and binary size.
#
# IMPORTANT: `local-whisper` and `local-llm` are MUTUALLY EXCLUSIVE in a single
# binary. whisper.cpp and llama.cpp each statically vendor their own copy of
# `ggml`, so linking both produces hundreds of duplicate `ggml_*` symbols
# (LNK2005 → LNK1169) and the link fails. Pick one per build.
default = []
# On-device speech-to-text (whisper.cpp). Links cleanly on its own.
local-whisper = ["dep:whisper-rs"]
# On-device speech-to-text with whisper.cpp CUDA acceleration. Requires an
# NVIDIA CUDA toolkit/runtime that whisper.cpp can find at build and run time.
local-whisper-cuda = ["local-whisper", "whisper-rs/cuda"]
# On-device polish (llama.cpp). Build separately from `local-whisper`.
local-llm = ["dep:llama-cpp-2", "dep:encoding_rs"]
# Back-compat alias: the historical `local-models` flag now means local STT only
# (whisper) — the combination that links cleanly and gives offline transcription
# with no API key. Build with `--features local-llm` (in its own build) for
# on-device polish instead.
local-models = ["local-whisper"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
# Phase 11: self-update against a GitHub Releases feed + launch-at-startup.
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
# Phase C: native file picker for the file-transcription queue.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture (WASAPI on Windows) + WAV encoding
cpal = "0.15"
hound = "3"

# Phase C: pure-Rust demux/decode for file transcription (wav/mp3/m4a/flac/ogg).
symphonia = { version = "0.5", features = [
    "mp3",
    "aac",
    "isomp4",
    "alac",
    "flac",
    "ogg",
    "vorbis",
    "wav",
    "pcm",
    "adpcm",
] }

# Text injection
enigo = "0.3"

# Groq HTTP API (multipart upload + JSON) + streaming model downloads.
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }

# Local-model download manager: streamed download + checksum verification.
sha2 = "0.10"
futures-util = "0.3"

# On-device inference (behind the `local-whisper` / `local-llm` features — see
# [features]). These compile whisper.cpp / llama.cpp via CMake + a C/C++ toolchain.
whisper-rs = { version = "0.16", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
# Decoder for llama.cpp `token_to_piece` (must match llama-cpp-2's encoding_rs).
encoding_rs = { version = "0.8", optional = true }

# Secure API-key storage in the OS credential store. The backend crate feature
# is platform-specific, so `keyring` is declared per-target below (Windows
# Credential Manager / macOS Keychain / Linux Secret Service). `secrets.rs` uses
# the same crate API regardless of backend, so it stays unchanged.

# History persistence (Phase 3). `bundled` compiles SQLite (FTS5 enabled) so
# there's no system dependency. `chrono` for timestamps + daily-stats date keys.
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }

# Misc
anyhow = "1"
parking_lot = "0.12"
async-trait = "0.1"
# Phase 5 (optimization): `tokio::time::timeout` bounds the polish step so a slow
# LLM never stalls injection. Tauri already pulls tokio in; the `time` feature is
# the only piece we use directly.
tokio = { version = "1", features = ["time", "sync"] }
autocorrect = "2.14"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
] }
# Windows Credential Manager backend for secure API-key storage.
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Keychain backend for secure API-key storage.
keyring = { version = "3", features = ["apple-native"] }
# Phase 1: frontmost-app capture + activate-by-pid focus restore. NSWorkspace
# gives the frontmost NSRunningApplication (its pid is our `isize` handle on
# macOS); NSRunningApplication re-activates it before we paste.
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace",
    "NSRunningApplication",
] }
# Phase 2: CGEventTap for bare-modifier + mouse-button triggers (the macOS
# analogue of the Windows low-level hooks) on a dedicated CFRunLoop thread, plus
# the CoreFoundation types used by the tap runloop, the Accessibility trust
# dictionary (permissions.rs), and the AX focused-window title (context.rs).
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux Secret Service backend (GNOME Keyring / KWallet) for secure API-key
# storage. Needs libdbus at build time (provided in CI + on desktop distros).
keyring = { version = "3", features = ["sync-secret-service"] }
# Phase 3 (Linux/X11): pure-Rust X11 client. `xinput` gives XI2 raw key events
# for the bare-modifier trigger (observed without a grab, so the key still
# reaches the app); `xtest` is pulled per the cross-platform plan. Focus
# capture/restore uses EWMH (`_NET_ACTIVE_WINDOW`); the mouse trigger uses a
# core `GrabButton` (a grab inherently consumes the click). Injection stays on
# the shared `enigo` path. Wayland (Phase 4) is a no-op here.
x11rb = { version = "0.13", features = ["xinput", "xtest"] }
